--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -107,7 +107,9 @@ jobs:
         if: always()
         run: |
           # Copy the full `asv continuous` log
-          cp asv_continuous.log .asv/results/
+          cp asv_continuous.log .asv/results/asv_continuous_${{ matrix.benchmark-name }}.log
+          # ensure that even if this isn't a PR, the benchmark_report workflow can run without error
+          touch .asv/results/message_${{ matrix.benchmark-name }}.txt
 
           # Add the message that might be posted as a comment on the PR
           # We delegate the actual comment to `benchmarks_report.yml` due to
@@ -115,7 +117,7 @@ jobs:
           if [[ $GITHUB_EVENT_NAME == pull_request ]]; then
 
           echo "${{ github.event.pull_request.number }}" > .asv/results/pr_number
-          cat <<EOF > .asv/results/message.txt
+          cat <<EOF > .asv/results/message_${{ matrix.benchmark-name }}.txt
           The benchmark run requested by $EVENT_NAME ($CONTENDER_REF vs $BASE_REF) has
           finished with status `${{ steps.run_benchmark.outcome }}`. See the
           [CI logs and artifacts](||BENCHMARK_CI_LOGS_URL||) for further details.
