--- a/.github/workflows/benchmarks_report.yml
+++ b/.github/workflows/benchmarks_report.yml
@@ -39,7 +39,15 @@ jobs:
       - name: Unzip and prepare data
         run: |
           unzip asv_results.zip
+          # combine the Qt and non-Qt messages
+          cat .asv/results/message_Qt.txt .asv/results/message_non-Qt.txt > .asv/results/message.txt
+
+      - name: Replace URLs
+        run: |
           sed -i 's@||BENCHMARK_CI_LOGS_URL||@${{ github.event.workflow_run.html_url }}@g' .asv/results/message.txt
+
+      - name: Collect PR number if available
+        run: |
           if [[ -f .asv/results/pr_number ]]; then
             echo "PR_NUMBER=$(cat .asv/results/pr_number)" >> $GITHUB_ENV
           fi
