--- a/.github/workflows/benchmarks_report.yml
+++ b/.github/workflows/benchmarks_report.yml
@@ -40,16 +40,16 @@ jobs:
         run: |
           unzip asv_results.zip
           # combine the Qt and non-Qt messages
-          cat .asv/results/message_Qt.txt .asv/results/message_non-Qt.txt > .asv/results/message.txt
+          cat message_Qt.txt message_non-Qt.txt > message.txt
 
       - name: Replace URLs
         run: |
-          sed -i 's@||BENCHMARK_CI_LOGS_URL||@${{ github.event.workflow_run.html_url }}@g' .asv/results/message.txt
+          sed -i 's@||BENCHMARK_CI_LOGS_URL||@${{ github.event.workflow_run.html_url }}@g' message.txt
 
       - name: Collect PR number if available
         run: |
-          if [[ -f .asv/results/pr_number ]]; then
-            echo "PR_NUMBER=$(cat .asv/results/pr_number)" >> $GITHUB_ENV
+          if [[ -f pr_number ]]; then
+            echo "PR_NUMBER=$(cat pr_number)" >> $GITHUB_ENV
           fi
 
       - name: "Comment on PR"
@@ -60,7 +60,7 @@ jobs:
           script: |
             let fs = require('fs');
             let issue_number = Number(process.env.PR_NUMBER);
-            let body = fs.readFileSync('.asv/results/message.txt');
+            let body = fs.readFileSync('message.txt');
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
