--- a/.github/workflows/benchmarks_report.yml
+++ b/.github/workflows/benchmarks_report.yml
@@ -65,7 +65,7 @@ jobs:
           script: |
             let fs = require('fs');
             let issue_number = Number(process.env.PR_NUMBER);
-            let body = fs.readFileSync('message.txt');
+            let body = fs.readFileSync('message.txt', 'utf8');
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
