--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -128,6 +128,7 @@ jobs:
           # potential token permissions issues
           if [[ $GITHUB_EVENT_NAME == pull_request ]]; then
 
+          echo "${{ github.event.pull_request.number }}" > .asv/results/pr_number
           echo \
           "The ${{ matrix.benchmark-name }} benchmark run requested by $EVENT_NAME ($CONTENDER_REF vs $BASE_REF) has" \
           "finished with status '${{ steps.run_benchmark.outcome }}'. See the" \
